@@ -1,3 +1,5 @@
+02-June-2017 Fixes #347. BAM used to report the C# compiler on it's output. Although correct at the time, this was in fact the Common Language Runtime (CLR) major.minor version. This has been corrected, and the targeted .NET framework is also displayed.
+
 ======== End of v1.1 releases ========
 
 
